feat(security): make CORS allowed origins configurable via application properties